# KI-Dev-Tycoon-

./: .gitignore  .pre-commit-config.yaml  100_schritte_plan.md  AGENT.md  Gameplan.md  README.md  Zusatz.docx  Zusatz.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
app/: README.md  noxfile.py  pyproject.toml
app/src/ki_dev_tycoon/: __init__.py
app/src/ki_dev_tycoon/cli/: __init__.py  __main__.py  ui_commands.py
app/src/ki_dev_tycoon/platform/: __init__.py  steam.py
app/src/ki_dev_tycoon/ui/: __init__.py  app.py  app.tcss  presenter.py  theme.py  viewmodels.py
app/src/ki_dev_tycoon/ui/screens/: __init__.py  base.py  dashboard.py  events.py  market.py  products.py  research.py  settings.py  team.py
app/src/ki_dev_tycoon/ui/widgets/: __init__.py  event_log.py  kpi_panel.py  market_table.py  navigation.py  product_table.py  research_tree.py  team_table.py  timeline.py
app/tests/: test_steam_wrapper.py  test_ui_smoke.py
app/tests/__snapshots__/: dashboard_kpis.txt
app/tools/: build_app.py  steam_upload.py
assets/: events.yaml  markets.yaml  products.yaml  research.yaml  roles.yaml
client/: README.md
client/godot_project/: project.godot
client/godot_project/scenes/: dashboard.tscn  project_list.tscn
client/godot_project/scenes/resources/: title_label.tres
client/godot_project/scripts/: project_list_preview.gd
client/tools/: build.py  requirements.txt
docs/: CODEOWNERS  contributing.md
docs/preflight/: budget_tracker.csv  naming_conventions.md  preflight_status.md  release_calendar.md  risks.md  task_board_plan.md  test_strategy.md  tooling_stack.md
docs/presskit/: README.md  feature_highlights.md  metadata.json  screenshots.md  store_description.md
scripts/: validate_assets.py
sim/: .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
sim/.benchmarks/Linux-CPython-3.12-64bit/: 0001_tick-loop-baseline.json
sim/config/profiles/: default.yaml
sim/docs/: vision_kpis.md
sim/src/ki_dev_tycoon/: __init__.py  app.py
sim/src/ki_dev_tycoon/achievements/: __init__.py
sim/src/ki_dev_tycoon/api/: __init__.py  app.py  dto.py
sim/src/ki_dev_tycoon/cli/: __init__.py  sim.py
sim/src/ki_dev_tycoon/config/: __init__.py  loader.py  schemas.py
sim/src/ki_dev_tycoon/core/: __init__.py  events.py  loop.py  rng.py  state.py  time.py
sim/src/ki_dev_tycoon/data/: __init__.py  loader.py
sim/src/ki_dev_tycoon/economy/: __init__.py  cashflow.py  demand.py
sim/src/ki_dev_tycoon/persistence/: __init__.py  errors.py  migrations.py  savegame.py
sim/src/ki_dev_tycoon/products/: __init__.py  quality.py
sim/src/ki_dev_tycoon/research/: __init__.py  tech_tree.py
sim/src/ki_dev_tycoon/team/: __init__.py  hiring.py  training.py
sim/src/ki_dev_tycoon/utils/: __init__.py  logging.py
sim/tests/api/: __init__.py  test_state_endpoint.py
sim/tests/benchmarks/: __init__.py  test_tick_loop.py
sim/tests/unit/: test_achievements.py  test_asset_loader.py  test_config_loader.py  test_events.py  test_invariants.py  test_logging_utils.py  test_rng.py  test_savegame.py  test_simulation.py  test_state.py  test_time.py
sim/tests/unit/core/: test_tick_loop.py
src/ki_dev_tycoon/: app.py
src/ki_dev_tycoon/core/: __init__.py  rng.py  state.py  time.py
src/ki_dev_tycoon/economy/: __init__.py
tests/unit/: test_rng.py  test_simulation.py
