[tool.poetry]
name = "ki-dev-tycoon-ui"
version = "0.1.0"
description = "Textual-based user interface for the KI Dev Tycoon simulation."
authors = ["KI Dev Tycoon Team <dev@ki-dev-tycoon.example>"]
readme = "README.md"
packages = [{ include = "ki_dev_tycoon", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
textual = "^0.58.1"
rich = "^13.9.1"
typer = "^0.12.5"
httpx = "^0.27.2"
ki-dev-tycoon = { path = "../sim", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.23.8"
textual-dev = "^1.2.1"

[tool.poetry.scripts]
ki-ui = "ki_dev_tycoon.cli.ui_commands:app"

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["ki_dev_tycoon"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
